# docker-prefetch-image

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-prefetch-image.toml.example  example_job.hcl
.github/workflows/: push_main.yml  release.yml
src/: app_init.rs  main.rs
