[package]
name = "docker-prefetch-image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.7.2"
clap = { version = "4.4.10", features = ["derive", "env"]}
docker-api = "0.14.0"
futures = "0.3.29"
maud = { version = "0.25.0", features = ["axum"] }
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34.0", features = ["full"]}
toml = "0.8.8"
tracing = "0.1.40"
tracing-opentelemetry = "0.22.0"

opentelemetry = { version = "0.21.0", features = [] }
opentelemetry-otlp = { version = "0.14.0", features = ["grpc-tonic", "http-proto"] }
opentelemetry-semantic-conventions = "0.13.0"
opentelemetry_sdk = { version = "0.21.1", features = ["rt-tokio"] }

tracing-subscriber = { version = "0.3.18", features = ["fmt", "json", "env-filter", "std", "registry"] }
url = "2.5.0"
signal-hook = "0.3.17"
